--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bram Verpoot</title>
 </head>
 <body>
-<p>test</p>
 </body>
 </html>
