--- a/index.html
+++ b/index.html
@@ -5,5 +5,21 @@
     <title>Bram Verpoot</title>
 </head>
 <body>
+<header>
+    <h1>
+        Labo's van Bram Verpoot
+    </h1>
+</header>
 </body>
+<section>
+    <h2>Eerste Semester</h2>
+    <ul>
+        <li>
+            <a href="labo2/index.html">Labo 2</a>
+        </li>
+        <li>
+            <a href="labo3/index.html">Labo 3</a>
+        </li>
+    </ul>
+</section>
 </html>
