--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="labo3/index.html">Labo 3</a>
         </li>
+        <li>
+            <a href="labo4/index.html">Labo 4</a>
+        </li>
     </ul>
 </section>
 </html>
