--- a/labo3/opleidingsaanbod/index.html
+++ b/labo3/opleidingsaanbod/index.html
@@ -10,7 +10,7 @@
 </header>
 
 <section>
-    <p>De Hogeschool VIVES is actief in zes studiegebieden:</p>
+    <header><h2>De Hogeschool VIVES is actief in zes studiegebieden:</h2></header>
     <ol>
         <li>Biotechniek</li>
         <li>Gezondheidszorg</li>
@@ -22,7 +22,7 @@
 </section>
 
 <section>
-    <p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma’s behalen:</p>
+    <header><h2>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma’s behalen:</h2></header>
 
     <ul>
         <li>Toegepaste informatica
