verslagen in de index

--- a/labo3/index.html
+++ b/labo3/index.html
@@ -17,6 +17,7 @@
         <li><a href="opleidingsaanbod/index.html">Opleidingsaanbod</a></li>
         <li><a href="personal_homepage/index.html">Personal Homepage</a></li>
         <li><a href="personal_homepage_uitbreiding/index.html">Personal Homepage Uitbreiding</a></li>
+        <li><a href="Labo3.pdf">Verslag</a></li>
         <li><a href="/index.html">Back</a>
     </ul>
 </section>
