--- a/labo4/index.html
+++ b/labo4/index.html
@@ -14,6 +14,7 @@
 <section>
     <ul>
         <li><a href="gesplitste_personal_homepage/index.html">Personal Homepage Gesplitst</a></li>
+        <li><a href="Labo4.pdf">Verslag</a></li>
         <li><a href="/index.html">Back</a>
     </ul>
 </section>
