--- a/labo2/index.html
+++ b/labo2/index.html
@@ -19,6 +19,7 @@
         <li><a href="opdracht5/index.html">Opdracht 5</a></li>
         <li><a href="opdracht9/index.html">Opdracht 9</a></li>
         <li><a href="opdracht10/index.html">Opdracht 10</a></li>
+        <li><a href="Labo2.pdf">Verslag</a></li>
         <li><a href="/index.html">Back</a>
     </ul>
 </section>
