--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>
             <a href="labo4/index.html">Labo 4</a>
         </li>
+        <li>
+            <a href="labo5/index.html">Labo 5</a>
+        </li>
     </ul>
 </section>
 </html>
