labo 5 update opdracht 7

--- a/labo5/index.html
+++ b/labo5/index.html
@@ -14,6 +14,8 @@
 <section>
     <ul>
         <li><a href="opdracht6/index.html">Opdracht 6</a></li>
+        <li><a href="opdracht7/index.html">Opdracht 7</a></li>
+
         <li><a href="Labo5.pdf">Verslag</a></li>
         <li><a href="/index.html">Back</a>
     </ul>
