--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li>
             <a href="labo5/index.html">Labo 5</a>
         </li>
+        <li>
+            <a href="labo6/index.html">Labo 6</a>
+        </li>
     </ul>
 </section>
 </html>
