--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li>
             <a href="labo6/index.html">Labo 6</a>
         </li>
+        <li>
+            <a href="labo7/index.html">Labo 7</a>
+        </li>
     </ul>
 </section>
 </html>
