--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li>
             <a href="labo7/index.html">Labo 7</a>
         </li>
+        <li>
+            <a href="labo8/index.html">Labo 8</a>
+        </li>
     </ul>
 </section>
 </html>
