--- a/labo8/demo/positioneren_elementen/demo2/index.html
+++ b/labo8/demo/positioneren_elementen/demo2/index.html
@@ -20,7 +20,7 @@
     <li><a href="#">link 4</a></li>
   </ul>
 </nav>
-<section>
+<section id="midden">
   <p>De opleiding tot <span>bachelor </span> maakt deel uit van het Hoger  Onderwijs. Het gaat hier om Hoger Onderwijs van 1 cyclus (3 jaar). Op de site van de vzw-Bachelor.be vind je meer info over de positie van de bacheloropleiding binnen de nieuwe bachelor/master-structuur.
   </p>
 </section>
