--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li>
             <a href="labo8/index.html">Labo 8</a>
         </li>
+        <li>
+            <a href="labo9/index.html">Labo 9</a>
+        </li>
     </ul>
 </section>
 </html>
