--- a/labo6/demo/selectors/index.html
+++ b/labo6/demo/selectors/index.html
@@ -33,7 +33,7 @@
         }
         */
         /*Pseudo-class selector */
-        /*pseudo-class-selector is een speciale soort CSS-selector die je helpt om een element te
+        /*pseudo-class-selector is een speciale soort styles-selector die je helpt om een element te
         stylen op basis van zijn toestand of specifieke eigenschappe
          */
         a:link {
