--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <li>
             <a href="labo9/index.html">Labo 9</a>
         </li>
+        <li>
+            <a href="labo10/index.html">Labo 10</a>
+        </li>
     </ul>
 </section>
 </html>
