--- a/labo9/demo/vertical_align/index.html
+++ b/labo9/demo/vertical_align/index.html
@@ -17,7 +17,7 @@
 
         .vert {
             vertical-align: middle; /*https://cssreference.io/property/vertical-align het moet een inline element zijn*/
-            /*The vertical-align styles property sets vertical alignment of an inline, inline-block or table-cell box.
+            /*The vertical-align style property sets vertical alignment of an inline, inline-block or table-cell box.
             middle -> The element is aligned with the baseline plus half the x-height of the parent.*/
         }
 
