--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <li>
             <a href="labo10/index.html">Labo 10</a>
         </li>
+        <li>
+            <a href="labo11/index.html">Labo 11</a>
+        </li>
+        <li>
+            <a href="labo12/index.html">Labo 12</a>
+        </li>
     </ul>
 </section>
 </html>
