--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
         <li>
             <a href="semester2/labo1/index.html">Labo 1</a>
         </li>
+        <li>
+            <a href="semester2/labo2/index.html">Labo 2</a>
+        </li>
+        <li>
+            <a href="semester2/labo3/index.html">Labo 3</a>
+        </li>
+        <li>
+            <a href="semester2/labo4/index.html">Labo 4</a>
+        </li>
+        <li>
+            <a href="semester2/labo5/index.html">Labo 5</a>
+        </li>
     </ul>
+
 </section>
 </html>
