--- a/semester2/labo4/opdracht_formulier_elementen/index.html
+++ b/semester2/labo4/opdracht_formulier_elementen/index.html
@@ -9,7 +9,7 @@
     <fieldset>
         <legend>Personal Information</legend>
         <label for="firstname">First Name*:</label>
-        <input type="text" id="firstname" name="firstname" placeholder="Your first name" required/>
+        <input type="text" id="firstname" name="firstname" placeholder="Your first name" autofocus  required/>
         <br/>
         <label for="lastname">Last Name*:</label>
         <input type="text" id="lastname" name="lastname" placeholder="Your last name" required/>
@@ -80,7 +80,7 @@
         <input type="date" id="birth_date" name="birth_date"><br>
 
         <label for="zipcode">Belgium zip-code reg number*:</label>
-        <input type="text" id="zipcode" name="zipcode" placeholder="9999" required><br>
+        <input pattern="[1-9][0-9]{3}" type="text" id="zipcode" name="zipcode" placeholder="9999" required><br>
     </fieldset>
 
     <fieldset>
