--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <li>
             <a href="semester2/labo5/index.html">Labo 5</a>
         </li>
+        <li>
+            <a href="semester2/labo6/index.html">Labo 6</a>
+        </li>
     </ul>
 
 </section>
