--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         <li>
             <a href="semester2/labo6/index.html">Labo 6</a>
         </li>
+        <li>
+            <a href="semester2/labo7/index.html">Labo 7</a>
+        </li>
     </ul>
 
 </section>
