--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <li>
             <a href="semester2/labo7/index.html">Labo 7</a>
         </li>
+        <li>
+            <a href="semester2/labo8/index.html">Labo 8</a>
+        </li>
     </ul>
 
 </section>
