--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         <li>
             <a href="semester2/labo8/index.html">Labo 8</a>
         </li>
+        <li>
+            <a href="semester2/labo9/index.html">Labo 9</a>
+        </li>
     </ul>
 
 </section>
