--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <li>
             <a href="semester2/labo9/index.html">Labo 9</a>
         </li>
+        <li>
+            <a href="semester2/labo10/index.html">Labo 10</a>
+        </li>
+
     </ul>
 
 </section>
