--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         <li>
             <a href="semester2/labo10/index.html">Labo 10</a>
         </li>
-
+        <li>
+            <a href="semester2/labo11/index.html">Labo 11</a>
+        </li>
     </ul>
 
 </section>
